--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: project
-
+# here it's saying that if there is any pull or push to my repo, run the workflow
 on:
   push:
     branches: [ master ]
@@ -11,16 +11,16 @@ on:
 
 jobs:
   build:
-
+   # ubunut/macos/windows
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '1.8'
+        distribution: 'adoptopenjdk'
         cache: maven
     - name: Build with Maven
       run: mvn clean install
